# jni

./: Android.mk  Application.mk  CMakeLists.txt  plugin.cpp  plugin.h
.github/workflows/: build-android.yml
